<resources>
    <string name="app_name" translatable="false">BookingAppTim</string>
    <string name="shop_app" translatable="false">Booking</string>
    <string name="cart">Cart</string>
    <string name="filters">Filters</string>
    <string name="category">Category</string>
    <string name="rooms" translatable="false">Room</string>
    <string name="apartment" translatable="false">Apartment</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="samsung">Samsung</string>
    <string name="xiaomi">Xiaomi</string>
    <string name="huawei">Huawei</string>
    <string name="nokia">Nokia</string>
    <string name="sort">Sort</string>

    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <string name="logout">Logout</string>
    <string name="accomodations">Accomodations</string>
    <string name="allOwnerAccommodations" translatable="false">My Reservations</string>
    <string name="allOwnerAccommodations1" translatable="false">My Accommodations</string>
    <string name="addAccommodations" translatable="false">Add accomodations</string>
    <string name="samsung_galaxy_s23_ultra_gray">Samsung</string>
    <string name="new_product">New product</string>
    <string name="profile">Profile</string>
    <string name="home" translatable="false">Home</string>
    <string name="reservations" translatable="false">Reservations</string>
    <string name="requests" translatable="false">Requests</string>
    <string name="notifications" translatable="false">Notifications</string>
    <string name="account" translatable="false">Account</string>
    <string name="register_with" translatable="false">Register with</string>
    <string name="navigation" translatable="false">Navigation</string>
    <string name="type" translatable="false">Type</string>
    <string name="language">Language</string>
    <string name="book_now" translatable="false">Book now</string>
    <string name="view_map" translatable="false">Map</string>
    <string name="number_of_people" translatable="false">Number of people</string>
    <string name="minimum_price" translatable="false">Minimum price</string>
    <string name="maximum_price" translatable="false">Maximum price</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="description_apartment" translatable="false">Apartmani su opremljeni svim modernim pogodnostima tako da možete uživati u veoma privatnoj ili nezavisnoj atmosferi, bez obzira na to da li rezervišete boravak sa porodicom ili grupom prijatelja. Sama zgrada ima lift i veličanstvenu terasu za zajedničko korišćenje na kojoj možete organizovati roštilje ili se jednostavno opustiti usred grada. Lako možete posetiti obližnju Gotsku četvrt koja je na samo nekoliko minuta pešice od gradske luke i plaže.</string>
    <string name="combobox_hint" translatable="false">Izaberite opciju</string>
    <string name="rate_owner">Rate owner</string>
    <string name="delete_rate_owner">Delete rate owner</string>
    <string name="view_rate_owner">View rate owner</string>
    <string name="report_owner">Report owner</string>
    <string name="add_describe">Add describe</string>
    <string name="rate_owner_title">Add rate owner</string>
    <string name="add_rate">Add rate owner</string>
    <string name="report_user_title">Report user</string>
    <string name="add_report">Add report user</string>
    <string name="rate_accommodation">Rate Accommodation</string>
    <string name="delete_rate_accommodation">Delete rate accommodation</string>
    <string name="view_rate_accommodation">View rate accommodation</string>
    <string name="add_rate_accommodation">Add rate Accommodation</string>
    <string name="favourite" translatable="false">Favourite accommodations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_edit_accommodation" translatable="false">EditAccommodationActivity</string>
    <string name="title_activity_load_acc_screen" translatable="false">LoadAccScreen</string>
    <string name="title_activity_accommodation_avaiability_screen">Leanback
        AccommodationAvaiabilityScreen
    </string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="title_activity_availability_accommodation">AvailabilityAccommodationActivity
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="magnetic_field">Magnetic field:</string>
    <string name="non_gravity_accelerometer">Non-gravity accelerometer:</string>
    <string name="accelerometer">Accelerometer:</string>
    <string name="proximity_sensor">Proximity sensor:</string>
    <string name="gyroscope">Gyroscope:</string>
    <string name="sensors">Sensors</string>
</resources>