<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/reservation_detail"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvHotelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Reservation"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <!-- Centralno pozicionirana slika hotela -->
<!--    <ImageView-->
<!--        android:id="@+id/ivHotel"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/tvHotelName"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:contentDescription="abc"-->
<!--        android:src="@drawable/apartment1" />-->

    <TextView
        android:id="@+id/reservationDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHotelName"
        android:layout_marginTop="16dp"
        android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/linearLayoutPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/rateOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_owner" />

            <Button
                android:id="@+id/deleteRateOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_rate_owner" />

            <Button
                android:id="@+id/viewRateOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_rate_owner" />

            <Button
                android:id="@+id/reportOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_owner" />

        </LinearLayout>
</RelativeLayout>
