<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_report_user_owner"
    android:padding="16dp"
    tools:context=".fragments.guest.report.AddReportUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvRateOwnerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_user_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextDescribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_describe"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:lines="5"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:layout_marginBottom="16dp"/>


        <Button
            android:id="@+id/btnAddRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_report"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</FrameLayout>
