<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_owner_review"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".fragments.guest.reviews.AddReviewOwnerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvRateOwnerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/rate_accommodation"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextDescribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_describe"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:lines="5"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:layout_marginBottom="16dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/RadioGroup"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5" />

        </RadioGroup>

        <Button
            android:id="@+id/btnAddRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_rate_accommodation"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</FrameLayout>
